changes to fix iphone display problem where navbar is wrapping to second line.

--- a/assets/intro/style.css
+++ b/assets/intro/style.css
@@ -86,7 +86,7 @@ a {
   font-size: 24px;
 }
 .home {
-  display: block;
+  display: inherit;
   position: absolute;
   top: 25px;
 }
